--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>ebook</title>
+    <!-- <link rel="stylesheet" href="<%=BASE_URL%>fonts/daysOne.css"> -->
   </head>
   <body>
     <noscript>
